Z-index bug.

--- a/apps/wsdjs_web/assets/css/componants/player.css
+++ b/apps/wsdjs_web/assets/css/componants/player.css
@@ -12,7 +12,7 @@
   left: 0;
   margin-right: auto;
   margin-left: auto;
-  z-index: 1000;
+  z-index: 2000;
 }
 .current-played {
   display: flex;
